manifest/production/namespaces/ingress-nginx/ingress/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: ingress.pembelajaran.my.id
      http:
        paths:
          - path: "/blog/app"
            pathType: Prefix
            backend:
              service:
                name: blog-svc
                port:
                  number: 80

---
apiVersion: v1
kind: Service
metadata:
  name: blog-svc
spec:
  type: ExternalName
  externalName: blog-app-svc.blog.svc
# test-service.namespacename.svc.cluster.local
